[FIX] html_editor: keep code view bottom border visible on overflow
Problem:
When the code view contains content that overflows horizontally, the
horizontal scrollbar hides the bottom border of the code view.

Solution:
Move the scrollbar inside the code view so the bottom border remains
visible.

Steps to reproduce:
- Add content in the code view that overflows horizontally.
- Observe that the scrollbar hides the bottom border.

task-6124267

--- a/addons/html_editor/static/src/others/embedded_components/plugins/syntax_highlighting_plugin/syntax_highlighting_plugin.scss
+++ b/addons/html_editor/static/src/others/embedded_components/plugins/syntax_highlighting_plugin/syntax_highlighting_plugin.scss
@@ -7,13 +7,18 @@
 
     pre, textarea.o_prism_source {
         margin: 0;
-        padding: 8px 16px;
+        padding: 20px 16px 8px 16px;
     }
 
     pre {
         font: inherit;
         tab-size: inherit;
         white-space: pre;
+        &::-webkit-scrollbar {
+            // Because we have two scrollbars on top of each others
+            // we hide the pre one.
+            opacity: 0;
+        }
     }
 
     textarea.o_prism_source {
@@ -34,6 +39,15 @@
         }
         &:focus::placeholder {
             opacity: 1;
+        }
+
+        &::-webkit-scrollbar {
+            height: 8px;
+        }
+    
+        &::-webkit-scrollbar-thumb {
+            border-radius: 4px;
+            background: #888;
         }
     }
 
